--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="character.png" alt="">
         </div>  
         <div class="sci">
-          <li><a href="#"><img src="facebook.png" alt=""></a></li>
+          <li><a href=""><img src="facebook.png" alt=""></a></li>
           <li><a href="#"><img src="twitter.png" alt=""></a></li>
           <li><a href="#"><img src="instagram.png" alt=""></a></li>
         </div>
